demo/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: argocd-demo
  name: argocd-demo
