demo/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: myservicea
  namespace: argocd-demo
spec:
  ports:
    - name: httpport
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: nginx
  type: ClusterIP
